2012-05-24  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* algebra/Makefile.in (initdb.$(FASLEXT)): Add --syslib to fix thinko.

2012-05-24  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* boot/scanner.boot: Eliminate fluid variable $n.
	(lexerRefresh?): New.
	(lexerSetLine!): Likewise.
	(lexerSkipBlank!): Likewise.
	(lexerSkipToEnd!): Likewise.
	(lexerAdvancePosition!): Likewise.
	(lexerCharCountToCompleteTab): Likewise.
	(lexerCurrentChar): Likewise.
	(lexerCharPosition): Likewise.
	(lexerCharacterAt): Likewise.
	(lexerEol?): Likewise.

2012-05-24  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* boot/scanner.boot (lexerLineLength): New.
	(shoeNextLine): Use it in replacement of $sz.
	(shoeLineToks): Likewise.
	(shoeLispEscape): Likewise.
	(shoeEsc): Likewise.
	(shoeStartsComment): Likewise.
	(shoeStartsNegComment): Likewise.
	(shoeNegComment): Likewise.
	(shoeComment): Likewise.
	(shoePossFloat): Likewise.
	(shoeSpace): Likewise.
	(shoeS): Likewise.
	(shoeW): Likewise.
	(shoeInteger1): Likewise.
	(shoeNumber): Likewise.
	(shoeExponent): Likewise.

2012-05-24  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* boot/scanner.boot (%Lexer): New record structure.
	Add a lexer parameter to all lexing functions that need one.
	Adjust their callers.

2012-05-23  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* boot/tokens.boot: "@" is now a new keyword.
	* boot/ast.boot (bfRestrict): New.
	(bpTyped): Rename from bpTagged.  Accept type restriction.
	* boot/utility.boot (drop): Restrict the result to a %List.

2012-05-23  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/database.boot (%Constructor): New.
	(makeConstructor): Likewise.
	(makeInitialDB): Tidy.
	* interp/daase.lisp (makeDB): Take two more parameters.  Build a
	%Constructor structure object too.

2012-05-23  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/sys-driver.boot (initializeDatabases): Load initidb if
	specified.
	* interp/database.boot (populateDFFromFile): Remove.
	(printAllInitdbInfo): Write as as Lisp file.